src/test/deca/syntax/valid/created/testPrint/printAvecprintbsn.deca
// Description :
//    Test de l'affichage d'une chaîne de caractères avec un double backslash n
//
// Résultats :
//    ok

{
    print("\\n");
}
