src/test/deca/syntax/invalid/created/testPrint/printIntMax.deca
// Description :
//    Test d'une instruction print avec un nombre entier très long
//
// Resultats :
//    Ligne 9: InvalidValueException: Integer too large 

{
    print(
        111111111111111111111111111111111111111
    );
}

